--- a/assets/fonts.css
+++ b/assets/fonts.css
@@ -35,3 +35,10 @@
 	font-weight: 200 900;
 	font-stretch: ultra-condensed ultra-expanded;
 }
+
+@font-face {
+	font-family: Excalifont;
+	src: url("fonts/Excalifont-Regular.woff2") format("woff2");
+	font-weight: 400;
+	font-display: swap;
+}
