An attempt to fix #96

--- a/assets/icons.css
+++ b/assets/icons.css
@@ -1,4 +1,4 @@
-@import url("https://kit.fontawesome.com/040e756b7e.css");
+/* @import url("https://kit.fontawesome.com/040e756b7e.css"); */
 
 :root {
 	--icon-font: var(--fa-font-regular), var(--fa-style-family-brands);
