--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -33,6 +33,8 @@
 	{{ includesEnd | safe }}
 	<link rel="alternate" type="application/atom+xml" title="Lea Verou • Feed" href="{{ page | relative }}/feed.xml" />
 	<script src="{{ page | relative }}/assets/global.js" type="module"></script>
+	<link rel="preload" as="script" href="https://kit.fontawesome.com/040e756b7e.js" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/040e756b7e.js" crossorigin="anonymous"></script>
 
 	{% if is_post -%}
 		<meta property="og:type" content="article" />
