--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -33,6 +33,7 @@
 	{{ includesEnd | safe }}
 	<link rel="alternate" type="application/atom+xml" title="Lea Verou • Feed" href="{{ page | relative }}/feed.xml" />
 	<script src="{{ page | relative }}/assets/global.js" type="module"></script>
+	<link rel="stylesheet" href="https://kit.fontawesome.com/040e756b7e.css" crossorigin="anonymous" />
 
 	{% if is_post -%}
 		<meta property="og:type" content="article" />
