--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -126,7 +126,7 @@
 	{% if is_post %}
 		<div class="cta-container">
 			<small>Enjoyed this post? Want more like it?</small>
-			<a href="https://ko-fi.com/leaverou" target="_blank" class="cta large sponsor">Pay what you can</a>
+			<a href="https://ko-fi.com/leaverou" target="_blank" class="cta large sponsor">Pay what you want</a>
 		</div>
 	{% endif %}
 	<div class="meta">
