--- a/index.njk
+++ b/index.njk
@@ -5,10 +5,12 @@ title: Home
 
 <a href="/about"><img src="/about/images/lightsaber.jpg" alt="Photo of me with a lightsaber"></a>
 {% markdown %}
-**Hi, I’m Lea!** 👋🏼 I make things that help folks make things.
-I’m building next generation web design tools as Product Lead at [Font Awesome](https://fontawesome.com/).
-Ι also [design web technologies](/specs/) and launch [open source dev tools](/projects/) used by millions.
-I hold a PhD from [MIT](https://mit.edu) on usability & innovation, and am open to limited [consulting](/consulting/) on my areas of expertise.
+**Hi, I’m Lea!** 👋🏼
+I make things that help people make things.
+Ι [design web technologies](/specs/) implemented in your browser,
+launch [open source dev tools](/projects/) used by millions,
+and [consult](/consulting/) on my areas of expertise.
+I hold a PhD in usability & innovation from [MIT](https://mit.edu) — but chose product over research.
 I love sharing knowledge and [speak](/speaking/), [teach](https://designftw.mit.edu), [write](/publications/),
 and [blog](/blog/) about product design, web technologies, usability, and more.
 {% endmarkdown %}
