--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,7 @@
 }
 
 :root {
+	--color-gray-mediumdark: var(--color-gray-30);
 	--color-gray-medium: var(--color-gray-50);
 	--color-gray-light: var(--color-gray-90);
 
@@ -265,25 +266,48 @@ dl {
 	border-block: 1px solid var(--color-gray-80);
 	border-block-width: 2px 1px;
 
+
 	dt, dd {
 		border-block-end: 1px solid var(--color-gray-80);
-		padding: .2em 2.5em;
 
-		&:not(:has(p, ul, ol)) {
-			padding-block: 1em;
+		&:where(:not(:has(p, ul, ol))) {
+			padding-block: .7rem;
 		}
 	}
 
 	& dt {
 		grid-column: 1;
-		padding-inline-start: 0;
+		font-weight: bold;
+		min-width: 10rem;
+
+		small {
+			display: block;
+			font-weight: 450;
+			color: var(--color-gray-mediumdark);
+			font-size: .8em;
+			font-style: italic;
+		}
 	}
 
 	& dd {
 		grid-column: 2;
 		margin: 0;
-		padding-inline-end: 0;
+		padding-inline-start: 1em;
 	}
+
+	@container main (width < 40rem) {
+		grid-template-columns: 1fr;
+
+		dt {
+			border-block-end: none;
+			padding-block-end: 0;
+		}
+
+		dd {
+			grid-column: 1;
+		}
+	}
+
 }
 
 a {
@@ -699,6 +723,8 @@ body > main {
 	padding-block: 2rem 1rem;
 	padding-inline: var(--content-margin-start) var(--content-margin-end);
 	font-family: var(--font-serif);
+	container: main / inline-size;
+	contain: inline-size;
 }
 
 body > footer {
