--- a/assets/components/tables.css
+++ b/assets/components/tables.css
@@ -35,6 +35,7 @@ tr {
 th, td {
 	border-block: 1px solid var(--color-gray-40a);
 	padding-inline: .5rem;
+	text-align: start;
 
 	> p:only-child {
 		display: contents;
