--- a/press/index.njk
+++ b/press/index.njk
@@ -3,7 +3,9 @@ title: Press
 mavo: true
 ---
 
-
+{% block head %}
+<link rel="stylesheet" href="/assets/publications.css">
+{% endblock %}
 
 <h2>Interviews</h2>
 
