--- a/publications/index.njk
+++ b/publications/index.njk
@@ -3,6 +3,10 @@ title: Publications
 mavo: true
 ---
 
+{% block head %}
+<link rel="stylesheet" href="/assets/publications.css">
+{% endblock %}
+
 <figure>
 	<img class="main" src="images/css-secrets-closed.jpg" alt="A photo of the CSS Secrets book, closed, on a wooden surface">
 	<a href="images/spread1.jpg" target="_blank"><img src="images/spread1.jpg" alt="CSS Secrets, open in a spread showing a Conic Gradients section"></a>
