Speaking page blurb

--- a/speaking/index.njk
+++ b/speaking/index.njk
@@ -3,9 +3,25 @@ title: Speaking
 mavo: true
 ---
 
-**Note:** I am currently extremely selective about the speaking engagements I accept, so I can focus on [my research at MIT](http://lea.verou.me/2014/02/im-going-to-mit/).
-If you want me to speak at your event, I require all expenses to be covered, plus a honorarium, determined on a case by case basis.
-To invite me to speak, please drop me a line at lea〖@〗verou.me.
+<details open>
+	<summary>Want me to speak at your event?</summary>
+{% markdown %}
+I'm currently very selective about the speaking engagements I accept.
+If you want me to speak at your event, I require all expenses to be covered (including accommodation, flights, ground transportation, and meals),
+plus a honorarium, determined on a case by case basis.
+
+While I may waive my honorarium on very rare occasions,
+preparing and delivering an informative, engaging talk is hard work and I generally cannot afford to work for free.
+Expenses being covered is completely non-negotiable.
+
+Some event organizers are under the impression that because remote conferences do not involve travel,
+it's reasonable to ask speakers to do them for free.
+On the contrary, my fee is generally much less negotiable for remote events.
+I enjoy the in-person contact with the audience and find remote talks to be far less rewarding.
+
+If all of the above doesn't scare you, <a class="contact" data-subject="Speaking invitation">drop me a line</a>!
+{% endmarkdown %}
+</details>
 
 <div class="talks" mv-app="" mv-storage="https://github.com/leaverou/lea.verou.me/data/speaking.json">
 	<h2>[count(talk)] sessions at [count(event)] events ([count(upcoming)] events upcoming)</h2>
