Use blocks, drop `includes`/`includesEnd` data properties

--- a/projects/index.njk
+++ b/projects/index.njk
@@ -1,10 +1,12 @@
 ---
-title: Open Source Projects
+title: Open Source Work
 page_css: true
-includes: |
-  <link rel="alternate" href="../data/projects.json" type="application/json" />
-  <script src="https://nudeui.com/meter-discrete/meter-discrete.js" type="module"></script>
 ---
+
+{% block head %}
+<link rel="alternate" href="../data/projects.json" type="application/json" />
+<script src="https://nudeui.com/meter-discrete/meter-discrete.js" type="module"></script>
+{% endblock %}
 
 {% markdown %}
 I have launched dozens of open source projects over the years, many used on millions of websites.
