--- a/index.njk
+++ b/index.njk
@@ -10,12 +10,15 @@ I make things that help people make things.
 Ι [design web technologies](/specs/) implemented in your browser,
 launch [open source dev tools](/projects/) used by millions,
 and [consult](/consulting/) on my areas of expertise.
-I hold a PhD in usability & innovation from [MIT](https://mit.edu) — but chose product over research.
+I hold a PhD in usability & innovation from [MIT](https://mit.edu)&thinsp;—&thinsp;but chose product over research.
 I love sharing knowledge and [speak](/speaking/), [teach](https://designftw.mit.edu), [write](/publications/),
-and [blog](/blog/) about product design, web technologies, usability, and more.
+and [blog](/blog/) about product design, web technologies, usability, and their intersection.
 {% endmarkdown %}
 
-<p><a class="cta" href="/about/">More about me</a></p>
+<p class="row">
+	<a class="cta" href="/about/">More about me</a>
+	<a class="cta secondary" href="/consulting/">Work with me</a>
+</p>
 </div>
 
 <h2><a href="/blog/">Blog</a> <a href="/feed.xml" title="Feed" class="feed"></a></h2>
