--- a/assets/icons.css
+++ b/assets/icons.css
@@ -4,6 +4,7 @@
 	--icon-arrow-down-to-line: "\f33d";
 	--icon-circle-arrow-left: "\f0a8";
 	--icon-circle-arrow-right: "\f0a9";
+	--icon-briefcase: "\f0b1";
 	--icon-bug: "\f188";
 	--icon-chrome: "\f268";
 	--icon-clipboard-check: "\f46c";
