--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -126,10 +126,17 @@
 
 <footer>
 	{% if is_post %}
+	<div class="row centered post-ctas">
+		<h2 class="h3">Enjoyed this post?</h2>
 		<div class="cta-container">
-			<small>Enjoyed this post? Want more like it?</small>
+			<small>Want more like it?</small>
 			<a href="https://ko-fi.com/leaverou" target="_blank" class="cta large sponsor">Pay what you want</a>
 		</div>
+		<div class="cta-container">
+			<small>Something resonated?</small>
+			<a href="https://ko-fi.com/leaverou" target="_blank" class="cta large work-with-me secondary">Work with me</a>
+		</div>
+	</div>
 	{% endif %}
 	<div class="meta">
 		{%- include "_broken-page.njk" -%}
