--- a/index.njk
+++ b/index.njk
@@ -16,8 +16,8 @@ and [blog](/blog/) about product design, web technologies, usability, and their 
 {% endmarkdown %}
 
 <p class="row">
-	<a class="cta" href="/about/">More about me</a>
-	<a class="cta secondary" href="/consulting/">Work with me</a>
+	<a class="cta" href="/about/" style="--icon: var(--icon-question);">More about me</a>
+	<a class="cta secondary work-with-me" href="/consulting/">Work with me</a>
 </p>
 </div>
 
@@ -26,4 +26,4 @@ and [blog](/blog/) about product design, web technologies, usability, and their 
 {% import "_posts.njk" as posts %}
 {{ posts.list(collections.published.slice(0, 30), {style: "compact", start: collections.published.length}) }}
 
-<p><a class="cta" href="/blog/page/3/">More blog posts</a></p>
+<p><a class="cta secondary" href="/blog/page/3/">All blog posts</a></p>
